embedded charts services

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,12 +6,16 @@
         <title>DZHW</title>
         <h1>Willkommen bei DZHW</h1>
         <p>Unsere Services</p>
+        <iframe src="https://ourworldindata.org/coronavirus-data-explorer?tab=map&zoomToSelection=true&country=~OWID_WRL&region=World&casesMetric=true&interval=total&hideControls=true&smoothing=0&pickerMetric=location&pickerSort=asc" loading="lazy" style="width: 100%; height: 600px; border: 0px none;"></iframe>
+        <iframe src="https://plotly.com/~tommy.sim93/1/" width="60%" height="600px"></iframe>
+        <iframe src="https://infogram.com/column-1h984wer1j1d4p3?live" width="60%" height="600px"></iframe>
+        <iframe src="https://www.powr.io/graph/u/d07bbb62_1600525934#platform=iframe" style="width:100%;" height="526px" frameborder="0"></iframe>
+        <iframe width="600" height="371" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRW7Pue0xJ6QxZ9kTXM4eZEdPkS3SUNnfzu-nfXST4L67xJJ1LXbLD8ieuSG5LV-nD7VlQIR0wmZqU1/pubchart?oid=721255356&amp;format=interactive"></iframe>
 
         <!-- Erste iframe -->
-        <iframe src="landing-page" width="60%" height="600px"></iframe>
-        <h2> Bitte gehen weiter</h2>
-        <!-- Erste iframe -->
-        <iframe src="landing2" width="60%" height="600px"></iframe>
+        <!--iframe src="landing-page" width="60%" height="600px"></iframe-->
+        <!--iframe src="landing2" width="60%" height="600px"></iframe-->
+
     </center>
 
 
