--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,13 +5,53 @@
     <center>
         <title>DZHW</title>
         <h1>Willkommen bei DZHW</h1>
-        <p>Unsere Services</p>
-        <iframe src="https://ourworldindata.org/coronavirus-data-explorer?tab=map&zoomToSelection=true&country=~OWID_WRL&region=World&casesMetric=true&interval=total&hideControls=true&smoothing=0&pickerMetric=location&pickerSort=asc" loading="lazy" style="width: 100%; height: 600px; border: 0px none;"></iframe>
-        <iframe src="https://plotly.com/~tommy.sim93/1/" width="60%" height="600px"></iframe>
-        <iframe src="https://infogram.com/column-1h984wer1j1d4p3?live" width="60%" height="600px"></iframe>
-        <iframe src="https://www.powr.io/graph/u/d07bbb62_1600525934#platform=iframe" style="width:100%;" height="526px" frameborder="0"></iframe>
-        <iframe width="600" height="371" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRW7Pue0xJ6QxZ9kTXM4eZEdPkS3SUNnfzu-nfXST4L67xJJ1LXbLD8ieuSG5LV-nD7VlQIR0wmZqU1/pubchart?oid=721255356&amp;format=interactive"></iframe>
 
+        <h2>Plotly 1</h2>
+        <li><strong>Code</strong> : Python</li>
+        <li><strong>Host über</strong>: Plotly.com private konnto</li>
+        <li><strong>Editable bei User</strong> : <span style="background-color: #00ff00;">YES</span></li>
+        <li><strong>Disadvantage </strong>: kleine dataset</li>
+        <iframe src="https://chart-studio.plotly.com/~tommy.sim93/3/#/" style="width:100%;" height="526px"></iframe>
+
+        <h2>Plotly 2</h2>
+        <li><strong>Code</strong> : Python</li>
+        <li><strong>Host über</strong>: github.com</li>
+        <li><strong>Editable bei User</strong> : No</li>
+        <li><span style="background-color: #00ff00;">MAJOR ADVANTAGE:</span>
+            <li>Large dataset</li> <li>Hosted über Private Server</li> <li>Dynamic Render</li>
+        </li>
+        <iframe src="https://nikhilg1312.github.io/host-plotly/" style="width:100%;" height="526px"></iframe>
+
+        <h2>Plotly 3</h2>
+        <li><strong>Code</strong> : keine</li>
+        <li><strong>Host über</strong>: plotly.com</li>
+        <li><strong>Editable bei User</strong> : No</li>
+        <iframe src="https://plotly.com/~tommy.sim93/1/" width="60%" height="600px"></iframe>
+
+        <h2>OurWorldInData</h2>
+        <li><strong>Code</strong> : keine</li>
+        <li><strong>Host über</strong>: ourworldindata.org</li>
+        <li><strong>Editable bei User</strong> : No</li>
+        <iframe src="https://ourworldindata.org/coronavirus-data-explorer?tab=map&zoomToSelection=true&country=~OWID_WRL&region=World&casesMetric=true&interval=total&hideControls=true&smoothing=0&pickerMetric=location&pickerSort=asc" loading="lazy" style="width: 100%; height: 600px; border: 0px none;"></iframe>
+
+
+        <h2>Infogram</h2>
+        <li><strong>Code</strong> : keine</li>
+        <li><strong>Host über</strong>: infogram.com</li>
+        <li><strong>Editable bei User</strong> : No</li>
+        <iframe src="https://infogram.com/column-1h984wer1j1d4p3?live" width="60%" height="600px"></iframe>
+
+        <h2>Powr.com</h2>
+        <li><strong>Code</strong> : keine</li>
+        <li><strong>Host über</strong>: Powr.com</li>
+        <li><strong>Editable bei User</strong> : No</li>
+        <iframe src="https://www.powr.io/graph/u/d07bbb62_1600525934#platform=iframe" style="width:100%;" height="526px" frameborder="0"></iframe>
+
+        <h2>Google Sheets</h2>
+        <li><strong>Code</strong> : keine</li>
+        <li><strong>Host über</strong>: docs.google.com</li>
+        <li><strong>Editable bei User</strong> : Yes</li>
+        <iframe width="600" height="371" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRW7Pue0xJ6QxZ9kTXM4eZEdPkS3SUNnfzu-nfXST4L67xJJ1LXbLD8ieuSG5LV-nD7VlQIR0wmZqU1/pubchart?oid=721255356&amp;format=interactive"></iframe>
         <!-- Erste iframe -->
         <!--iframe src="landing-page" width="60%" height="600px"></iframe-->
         <!--iframe src="landing2" width="60%" height="600px"></iframe-->
